import { JavaGenerator } from '../../../src/generators'; 

describe('JavaGenerator', () => {
  let generator: JavaGenerator;
  beforeEach(() => {
    generator = new JavaGenerator();
  });
  afterEach(() => {
    jest.restoreAllMocks();
  });

  test('should not render reserved keyword', async () => {
    const doc = {
      $id: 'Address',
      type: 'object',
      properties: {
        enum: { type: 'string' },
        reservedEnum: { type: 'string' }
      },
      additionalProperties: false
    };

    const models = await generator.generate(doc);
    expect(models).toHaveLength(1);
    expect(models[0].result).toMatchSnapshot();
  });
  test('should render `class` type', async () => {
    const doc = {
      $id: 'Address',
      type: 'object',
      properties: {
        street_name: { type: 'string' },
        city: { type: 'string', description: 'City description' },
        state: { type: 'string' },
        house_number: { type: 'number' },
        marriage: { type: 'boolean', description: 'Status if marriage live in given house' },
        members: { oneOf: [{ type: 'string' }, { type: 'number' }, { type: 'boolean' }], },
        array_type: { type: 'array', items: [{ type: 'string' }, { type: 'number' }] },
      },
      patternProperties: {
        '^S(.?*)test&': {
          type: 'string'
        }
      },
      required: ['street_name', 'city', 'state', 'house_number', 'array_type'],
    };
    const expectedDependencies = ['import java.util.Map;'];
    const models = await generator.generate(doc);
    expect(models).toHaveLength(1);
    expect(models[0].result).toMatchSnapshot();
    expect(models[0].dependencies).toEqual(expectedDependencies);
  });

  test('should work custom preset for `class` type', async () => {
    const doc = {
      $id: 'CustomClass',
      type: 'object',
      properties: {
        property: { type: 'string' },
      }
    };
    generator = new JavaGenerator({ presets: [
      {
        class: {
          property({ renderer, property, content }) {
            const annotation = renderer.renderAnnotation('JsonProperty', `"${property.propertyName}"`);
            return `${annotation}\n${content}`;
          },
          getter({ renderer, property, content }) {
            const annotation = renderer.renderAnnotation('JsonProperty', `"${property.propertyName}"`);
            return `${annotation}\n${content}`;
          },
          setter({ renderer, property, content }) {
            const annotation = renderer.renderAnnotation('JsonProperty', `"${property.propertyName}"`);
            return `${annotation}\n${content}`;
          },
        }
      }
    ] });
    const expectedDependencies = ['import java.util.Map;'];

    const models = await generator.generate(doc);
    expect(models).toHaveLength(1);
    expect(models[0].result).toMatchSnapshot();
    expect(models[0].dependencies).toEqual(expectedDependencies);
  });

  test('should render `enum` type (string type)', async () => {
    const doc = {
      $id: 'States',
      type: 'string',
      enum: ['Texas', 'Alabama', 'California', 'New York'],
    };
    const expectedDependencies = ['import com.fasterxml.jackson.annotation.*;'];

    const models = await generator.generate(doc);
    expect(models).toHaveLength(1);
    expect(models[0].result).toMatchSnapshot();
    expect(models[0].dependencies).toEqual(expectedDependencies);
  });

  test('should render `enum` type (integer type)', async () => {
    const doc = {
      $id: 'Numbers',
      type: 'integer',
      enum: [0, 1, 2, 3],
    };
    const expectedDependencies = ['import com.fasterxml.jackson.annotation.*;'];
    
    const models = await generator.generate(doc);
    expect(models).toHaveLength(1);
    expect(models[0].result).toMatchSnapshot();
    expect(models[0].dependencies).toEqual(expectedDependencies);
  });

  test('should render `enum` type (union type)', async () => {
    const doc = {
      $id: 'Union',
      type: ['string', 'integer', 'boolean'],
      enum: ['Texas', 'Alabama', 0, 1, '1', true, {test: 'test'}],
    };
    const expectedDependencies = ['import com.fasterxml.jackson.annotation.*;'];
    
    const models = await generator.generate(doc);
    expect(models).toHaveLength(1);
    expect(models[0].result).toMatchSnapshot();
    expect(models[0].dependencies).toEqual(expectedDependencies);
  });

  test('should render custom preset for `enum` type', async () => {
    const doc = {
      $id: 'CustomEnum',
      type: 'string',
      enum: ['Texas', 'Alabama', 'California'],
    };

    generator = new JavaGenerator({ presets: [
      {
        enum: {
          self({ renderer, content }) {
            const annotation = renderer.renderAnnotation('EnumAnnotation');
            return `${annotation}\n${content}`;
          },
        }
      }
    ] });
    const expectedDependencies = ['import com.fasterxml.jackson.annotation.*;'];
    
    const models = await generator.generate(doc);
    expect(models).toHaveLength(1);
    expect(models[0].result).toMatchSnapshot();
    expect(models[0].dependencies).toEqual(expectedDependencies);
  });

  test('should render enums with translated special characters', async () => {
    const doc = {
      $id: 'States',
      enum: ['test+', 'test', 'test-', 'test?!', '*test']
    };
    const expectedDependencies = ['import com.fasterxml.jackson.annotation.*;'];
    
    const models = await generator.generate(doc);
    expect(models).toHaveLength(1);
    expect(models[0].result).toMatchSnapshot();
    expect(models[0].dependencies).toEqual(expectedDependencies);
  });

  test('should render List type for collections', async () => {
    const doc = {
      $id: 'CustomClass',
      type: 'object',
      additionalProperties: false,
      properties: {
        arrayType: { type: 'array' },
      }
    };
    const expectedDependencies = ['import java.util.List;'];

    generator = new JavaGenerator({ collectionType: 'List' });

    const models = await generator.generate(doc);
    expect(models).toHaveLength(1);
    expect(models[0].result).toMatchSnapshot();
    expect(models[0].dependencies).toEqual(expectedDependencies);
  });

  test('should render models and their dependencies', async () => {
    const doc = {
      $id: 'Address',
      type: 'object',
      properties: {
        street_name: { type: 'string' },
        city: { type: 'string', description: 'City description' },
        state: { type: 'string' },
        house_number: { type: 'number' },
        marriage: { type: 'boolean', description: 'Status if marriage live in given house' },
        members: { oneOf: [{ type: 'string' }, { type: 'number' }, { type: 'boolean' }], },
        array_type: { type: 'array', items: [{ type: 'string' }, { type: 'number' }] },
        other_model: { type: 'object', $id: 'OtherModel', properties: {street_name: { type: 'string' }} },
      },
      patternProperties: {
        '^S(.?*)test&': {
          type: 'string'
        }
      },
      required: ['street_name', 'city', 'state', 'house_number', 'array_type'],
    };
    const config = {packageName: 'test.package'};
    const models = await generator.generateCompleteModels(doc, config);
    expect(models).toHaveLength(2);
    expect(models[0].result).toMatchSnapshot();
    expect(models[1].result).toMatchSnapshot();
  });
  test('should throw error when reserved keyword is used for package name', async () => {
    const doc = {
      $id: 'Address',
      type: 'object',
      properties: {
        street_name: { type: 'string' },
        city: { type: 'string', description: 'City description' },
        state: { type: 'string' },
        house_number: { type: 'number' },
        marriage: { type: 'boolean', description: 'Status if marriage live in given house' },
        members: { oneOf: [{ type: 'string' }, { type: 'number' }, { type: 'boolean' }], },
        array_type: { type: 'array', items: [{ type: 'string' }, { type: 'number' }] },
      },
      patternProperties: {
        '^S(.?*)test&': {
          type: 'string'
        }
      },
      required: ['street_name', 'city', 'state', 'house_number', 'array_type'],
    };
    const config = {packageName: 'package'};
    const expectedError = new Error('You cannot use reserved Java keyword (package) as package name, please use another.');
    await expect(generator.generateCompleteModels(doc, config)).rejects.toEqual(expectedError);
  });

  describe('oneOf / union', () => {
    const asyncapiDoc = {
      asyncapi: '2.5.0',
      info: {
        title: 'Pet',
        version: '1.0.0'
      },
      channels: {},
      components: {
        messages: {
          Pet: {
            payload: {
              title: 'Pet',
              oneOf: [
                { $ref: '#/components/schemas/Cat' },
                { $ref: '#/components/schemas/Dog' },
              ]
            }
          },
        },
        schemas: {
          Animal: {
            type: 'object',
            additionalProperties: false,
            discriminator: 'animalType',
            properties: {
              animalType: {
                title: 'AnimalType',
                type: 'string'
              },
            },
          },
          Cat: {
            allOf: [
              { $ref: '#/components/schemas/Animal' },
              {
                type: 'object',
                additionalProperties: false,
                properties: {
                  animalType: {
                    const: 'Cat'
                  },
                  huntingSkill: {
                    type: 'string',
                  },
                },
              }
            ]
          },
          Dog: {
            allOf: [
              { $ref: '#/components/schemas/Animal' },
              {
                type: 'object',
                additionalProperties: false,
                properties: {
                  animalType: {
                    const: 'Dog',
                  },
                  packSize: {
                    type: 'integer',
                  }
                },
              }
            ]
          },
        }
      }
    };

    test.only('should render oneOf', async () => {
      const models = await generator.generate(asyncapiDoc);
      expect(models).toHaveLength(4);
      expect(models.map((model) => model.result)).toMatchSnapshot();

      const pet = models.find((model) => model.modelName === 'Pet');
      expect(pet).not.toBeUndefined();
      expect(pet?.result).toContain('public class Pet');

      const animalTypeEnum = models.find((model) => model.modelName === 'AnimalType');
      expect(animalTypeEnum).not.toBeUndefined();
      expect(animalTypeEnum?.result).toContain('CAT((String)"Cat"), DOG((String)"Dog")');

      const cat = models.find((model) => model.modelName === 'Cat');
      expect(cat).not.toBeUndefined();
      expect(cat?.result).toContain('animalType');
      expect(cat?.result).toContain('huntingSkill');
      expect(cat?.result).not.toContain('packSize');

      const dog = models.find((model) => model.modelName === 'Dog');
      expect(dog).not.toBeUndefined();
      expect(dog?.result).toContain('animalType');
      expect(dog?.result).toContain('packSize');
      expect(dog?.result).not.toContain('huntingSkill');
    });
  });
});
